--- a/plugins/software/app/views/patch_updates/index.html.erb
+++ b/plugins/software/app/views/patch_updates/index.html.erb
@@ -61,7 +61,7 @@
     <div class="loading"></div>
 <!--     <#%#@patch_updates = []#%#> -->
     <% if @patch_updates.empty? %>
-    <h3 class="module_header"><%=_("Your system is up to date.") unless @error%></h3>
+    <h3 class="module_header"><%=_("Your system is up to date.") unless @error%></h3> <!-- RORSCAN_ITL -->
     <div class="nav-buttons">
       <%= form_back_button %>
     </div>
