--- a/plugins/status/app/views/status/_status_progress.html.erb
+++ b/plugins/status/app/views/status/_status_progress.html.erb
@@ -26,7 +26,7 @@
   </div>
 
   <div style="float: left; padding-left: 1em; padding-top:10px">
-    <%= _("Checking system status") -%>
+    <%= _("Checking system status") -%> <!-- RORSCAN_ITL -->
   </div>
 
   <%= progress_bar(progress) -%>
