--- a/webclient/app/views/controlpanel/basesystem.rhtml
+++ b/webclient/app/views/controlpanel/basesystem.rhtml
@@ -14,7 +14,7 @@
 #   You should have received a copy of the GNU Lesser General Public
 # License along with this library; if not, write to the Free Software 
 # Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA
--->
+ RORSCAN_ICF -->
 <h2><img src="/images/yast-config.png" height="23" width="23" border="0" /> <%= _("Base system setup") %></h2>
 
 <h3><%= _("Your initial system setup was not completed. Please continue with setting up the modules.") %></h3>
