added more ignore keywords for ror-sec-scanner to reduce number of false positives during verification

--- a/plugins/services/app/views/services/index.rhtml
+++ b/plugins/services/app/views/services/index.rhtml
@@ -194,7 +194,7 @@ function enable_buttons (s) {
 
 <% unless @permissions[:execute] %>
   <div id="heading" class="pad1_2em">
-    <p class="missing-permissions"><%=_("You do not have permission to execute the services.")%></p>
+    <p class="missing-permissions"><%=_("You do not have permission to execute the services.")%></p> <!-- RORSCAN_ITL -->
   </div>
 <% end %>
 
