--- a/plugins/software/app/views/patch_updates/_patch_summary.html.erb
+++ b/plugins/software/app/views/patch_updates/_patch_summary.html.erb
@@ -22,9 +22,11 @@
 %>
 <%
   error_type = error ? :unknown : :none
-  if error.class == ClientException &&
-      error.backend_exception_type == "PACKAGEKIT_INSTALL"
-    error_type = :install
+  if error.class == ClientException
+    case error.backend_exception_type 
+    when "PACKAGEKIT_INSTALL" then error_type = :install
+    when "PACKAGEKIT_LICENSE" then error_type = :license
+    end
   end
   error_type = :unauthorized if error.class == ActiveResource::UnauthorizedAccess
   unsigned_repo = nil
@@ -58,6 +60,10 @@
 		:url => { :controller => :patch_updates, :action => :show_summary, :background => true }) %>
 	      }, 15000);
 	  <% end -%>
+      <% when :license %>
+        <% link_to :controller => "patch_updates", :action => "license" do %>
+          <%= _("Update needs EULA license confirmation. Please follow to patch module to decide about license.") %>
+        <% end %>
       <% end %>
   <% else %>
     <% label = [] %>
